{{$NEXT}}

3.001     2017-01-16 13:42:21+01:00 Europe/Prague

Features:
* In line with Universal Dependencies v2, the feature 'foreign' has again just
  one value. The values 'fscript' and 'tscript' had been used only in
  el::conll. They are now preserved in the 'other' feature.



3.000     2017-01-15 11:04:26+01:00 Europe/Prague

Drivers:
* FO::Setur
* PT::Freeling
* UG::Udt

Features:
* New value 'aug' of feature 'degree': augmentative, opposite of diminutive.
  Used for nouns in the Freeling tagset for Portuguese.
* Feature 'animateness' renamed to 'animacy'. Affected drivers:
  xx::multext
  cs::pdt
  eu::conll
  fa::conll
  hsb::sorokin
  nl::cgn
  pl::ipipan
  ru::syntagrus
  sk::snk
  ta::tamiltb
* Feature 'definiteness' renamed to 'definite'. Affected drivers:
  xx::multext
  ar::padt ar::conll ar::conll2007
  bg::conll
  da::conll
  de::smor
  el::conll
  fo::setur
  he::conll
  hu::conll
  it::conll
  nl::cgn nl::conll
  pt::conll pt::cintil
  ro::rdt
  sl::conll
  sv::mamba sv::parole sv::suc
* Feature 'negativeness' renamed to 'polarity'. Affected drivers:
  xx::multext
  ar::padt ar::conll ar::conll2007
  bg::conll
  bn::conll
  ca::conll2009
  cs::pdt cs::ajka cs::pmk cs::pmkkr
  de::stts de::smor
  el::conll
  et::puudepank
  fi::turku
  he::conll
  hu::conll
  ja::conll
  mt::mlss
  pl::ipipan
  sk::snk
  sl::conll
  ta::tamiltb
  tr::conll
  zh::conll
* Feature 'politeness' renamed to 'polite'. Features 'abspoliteness',
  'ergpoliteness' and 'datpoliteness' renamed similarly. Affected drivers:
  ca::conll2009
  cs::pmk
  da::conll
  eu::conll
  hi::conll
  ja::conll
  nl::cgn
  pt::freeling
  ta::tamiltb
  ur::conll
  zh::conll
* Renamed and new feature values:
  * abspolite=infm instead of abspolite=inf
  * abspolite=form instead of abspolite=pol
  * abspolite=elev
  * abspolite=humb
  * animacy=hum
  * aspect=prosp instead of aspect=pro
  * datpolite=infm instead of datpolite=inf
  * datpolite=form instead of datpolite=pol
  * datpolite=elev